queen beginning 100% done

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.AIAntWars.jar}
+    ${reference.AIAntWars.jar}:\
+    ${reference.AIAntWarsGraphics.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +63,10 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.AIAntWars=../AIAntWars-master
+project.AIAntWars=../../NetBeansProjects/AIAntWars-master
+project.AIAntWarsGraphics=../../NetBeansProjects/AIAntWarsGraphics-master
 reference.AIAntWars.jar=${project.AIAntWars}/dist/AIAntWars.jar
+reference.AIAntWarsGraphics.jar=${project.AIAntWarsGraphics}/dist/AIAntWarsGraphics.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
