I hope I improved the queen

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,8 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.AIAntWars.jar}:\
-    ${reference.AIAntWarsGraphics.jar}
+    ${reference.AIAntWarsGraphics.jar}:\
+    ${reference.AIAntWars.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,8 +63,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.AIAntWars=../../NetBeansProjects/AIAntWars-master
-project.AIAntWarsGraphics=../../NetBeansProjects/AIAntWarsGraphics-master
+project.AIAntWars=../../../NetBeansProjects/AIAntWars-master
+project.AIAntWarsGraphics=../../../NetBeansProjects/AIAntWarsGraphics-master
 reference.AIAntWars.jar=${project.AIAntWars}/dist/AIAntWars.jar
 reference.AIAntWarsGraphics.jar=${project.AIAntWarsGraphics}/dist/AIAntWarsGraphics.jar
 run.classpath=\
