--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.AIAntWarsGraphics.jar}:\
-    ${reference.AIAntWars.jar}
+    ${reference.AIAntWars.jar}:\
+    ${reference.AIAntWars-1.jar}:\
+    ${reference.Tournament_3_0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,9 +66,13 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.AIAntWars=../../../NetBeansProjects/AIAntWars-master
+project.AIAntWars-1=../antgame/AIAntWars
 project.AIAntWarsGraphics=../../../NetBeansProjects/AIAntWarsGraphics-master
+project.Tournament_3_0=../antgame/Tournament
+reference.AIAntWars-1.jar=${project.AIAntWars-1}/dist/AIAntWars.jar
 reference.AIAntWars.jar=${project.AIAntWars}/dist/AIAntWars.jar
 reference.AIAntWarsGraphics.jar=${project.AIAntWarsGraphics}/dist/AIAntWarsGraphics.jar
+reference.Tournament_3_0.jar=${project.Tournament_3_0}/dist/Tournament_3.0.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
