--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,8 +63,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.AIAntWars=../../../NetBeansProjects/AIAntWars-master
-project.AIAntWarsGraphics=../../../NetBeansProjects/AIAntWarsGraphics-master
+project.AIAntWars=../../AIAntWars-master
+project.AIAntWarsGraphics=../../AIAntWarsGraphics-master
 reference.AIAntWars.jar=${project.AIAntWars}/dist/AIAntWars.jar
 reference.AIAntWarsGraphics.jar=${project.AIAntWarsGraphics}/dist/AIAntWarsGraphics.jar
 run.classpath=\
